fixed x axis overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -519,6 +519,12 @@ input[name='q']::placeholder {
     color: #fafafa;
 }
 
+#privacy-container{
+    margin-right: 0;
+    margin-left: 0;
+    overflow-x: hidden;
+}
+
 #privacy-link {
     color: #fafafa!important;
 }
